CodeGen/y.output
Grammar

    0 $accept: program_head $end

    1 program_head: program

    2 program: jump_marker function
    3        | program function

    4 function: var_type id '(' parameter_list ')' ';'
    5         | var_type id '(' parameter_list ')' function_body

    6 function_body: '{' statement_list '}'
    7              | '{' declaration_list statement_list '}'

    8 declaration_list: declaration ';'
    9                 | declaration_list declaration ';'

   10 declaration: INT id
   11            | FLOAT id
   12            | declaration ',' id

   13 parameter_list: INT id
   14               | FLOAT id
   15               | parameter_list ',' INT id
   16               | parameter_list ',' FLOAT id
   17               | VOID
   18               | %empty

   19 var_type: INT
   20         | VOID
   21         | FLOAT

   22 statement_list: statement
   23               | statement_list marker statement

   24 statement: matched_statement
   25          | unmatched_statement

   26 matched_statement: IF '(' assignment ')' marker matched_statement jump_marker ELSE marker matched_statement
   27                  | assignment ';'
   28                  | RETURN ';'
   29                  | RETURN assignment ';'
   30                  | WHILE marker '(' assignment ')' marker matched_statement jump_marker
   31                  | DO marker statement WHILE '(' marker assignment ')' ';'
   32                  | FOR '(' assignment ';' marker assignment ';' marker assignment jump_marker ')' marker matched_statement jump_marker
   33                  | '{' statement_list '}'
   34                  | '{' '}'

   35 unmatched_statement: IF '(' assignment ')' marker statement
   36                    | WHILE marker '(' assignment ')' marker unmatched_statement jump_marker
   37                    | FOR '(' assignment ';' marker assignment ';' marker assignment jump_marker ')' marker unmatched_statement jump_marker
   38                    | IF '(' assignment ')' marker matched_statement jump_marker ELSE marker unmatched_statement

   39 assignment: expression
   40           | id '=' expression

   41 expression: INC_OP expression
   42           | DEC_OP expression
   43           | expression LOG_OR marker expression
   44           | expression LOG_AND marker expression
   45           | expression NOT_EQUAL expression
   46           | expression EQUAL expression
   47           | expression GREATER_OR_EQUAL expression
   48           | expression LESS_OR_EQUAL expression
   49           | expression '>' expression
   50           | expression '<' expression
   51           | expression SHIFTLEFT expression
   52           | expression '+' expression
   53           | expression '-' expression
   54           | expression '*' expression
   55           | expression '/' expression
   56           | expression '%' expression
   57           | '!' expression
   58           | U_PLUS expression
   59           | U_MINUS expression
   60           | CONSTANT
   61           | '(' expression ')'
   62           | id '(' exp_list ')'
   63           | id '(' ')'
   64           | id

   65 exp_list: expression
   66         | exp_list ',' expression

   67 id: IDENTIFIER

   68 marker: %empty

   69 jump_marker: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 57
'%' (37) 56
'(' (40) 4 5 26 30 31 32 35 36 37 38 61 62 63
')' (41) 4 5 26 30 31 32 35 36 37 38 61 62 63
'*' (42) 54
'+' (43) 52
',' (44) 12 15 16 66
'-' (45) 53
'/' (47) 55
';' (59) 4 8 9 27 28 29 31 32 37
'<' (60) 50
'=' (61) 40
'>' (62) 49
'{' (123) 6 7 33 34
'}' (125) 6 7 33 34
error (256)
VOID (258) 17 20
INT (259) 10 13 15 19
FLOAT (260) 11 14 16 21
CONSTANT (261) 60
IDENTIFIER (262) 67
IF (263) 26 35 38
ELSE (264) 26 38
RETURN (265) 28 29
DO (266) 31
WHILE (267) 30 31 36
FOR (268) 32 37
INC_OP (269) 41
DEC_OP (270) 42
U_PLUS (271) 58
U_MINUS (272) 59
EQUAL (273) 46
NOT_EQUAL (274) 45
GREATER_OR_EQUAL (275) 47
LESS_OR_EQUAL (276) 48
SHIFTLEFT (277) 51
LOG_AND (278) 44
LOG_OR (279) 43


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program_head (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 3
function (43)
    on left: 4 5, on right: 2 3
function_body (44)
    on left: 6 7, on right: 5
declaration_list (45)
    on left: 8 9, on right: 7 9
declaration (46)
    on left: 10 11 12, on right: 8 9 12
parameter_list (47)
    on left: 13 14 15 16 17 18, on right: 4 5 15 16
var_type (48)
    on left: 19 20 21, on right: 4 5
statement_list (49)
    on left: 22 23, on right: 6 7 23 33
statement (50)
    on left: 24 25, on right: 22 23 31 35
matched_statement (51)
    on left: 26 27 28 29 30 31 32 33 34, on right: 24 26 30 32 38
unmatched_statement (52)
    on left: 35 36 37 38, on right: 25 36 37 38
assignment (53)
    on left: 39 40, on right: 26 27 29 30 31 32 35 36 37 38
expression (54)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64, on right: 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 59 61 65 66
exp_list (55)
    on left: 65 66, on right: 62 66
id (56)
    on left: 67, on right: 4 5 10 11 12 13 14 15 16 40 62 63 64
marker (57)
    on left: 68, on right: 23 26 30 31 32 35 36 37 38 43 44
jump_marker (58)
    on left: 69, on right: 2 26 30 32 36 37 38


State 0

    0 $accept: . program_head $end

    $default  reduce using rule 69 (jump_marker)

    program_head  go to state 1
    program       go to state 2
    jump_marker   go to state 3


State 1

    0 $accept: program_head . $end

    $end  shift, and go to state 4


State 2

    1 program_head: program .
    3 program: program . function

    VOID   shift, and go to state 5
    INT    shift, and go to state 6
    FLOAT  shift, and go to state 7

    $default  reduce using rule 1 (program_head)

    function  go to state 8
    var_type  go to state 9


State 3

    2 program: jump_marker . function

    VOID   shift, and go to state 5
    INT    shift, and go to state 6
    FLOAT  shift, and go to state 7

    function  go to state 10
    var_type  go to state 9


State 4

    0 $accept: program_head $end .

    $default  accept


State 5

   20 var_type: VOID .

    $default  reduce using rule 20 (var_type)


State 6

   19 var_type: INT .

    $default  reduce using rule 19 (var_type)


State 7

   21 var_type: FLOAT .

    $default  reduce using rule 21 (var_type)


State 8

    3 program: program function .

    $default  reduce using rule 3 (program)


State 9

    4 function: var_type . id '(' parameter_list ')' ';'
    5         | var_type . id '(' parameter_list ')' function_body

    IDENTIFIER  shift, and go to state 11

    id  go to state 12


State 10

    2 program: jump_marker function .

    $default  reduce using rule 2 (program)


State 11

   67 id: IDENTIFIER .

    $default  reduce using rule 67 (id)


State 12

    4 function: var_type id . '(' parameter_list ')' ';'
    5         | var_type id . '(' parameter_list ')' function_body

    '('  shift, and go to state 13


State 13

    4 function: var_type id '(' . parameter_list ')' ';'
    5         | var_type id '(' . parameter_list ')' function_body

    VOID   shift, and go to state 14
    INT    shift, and go to state 15
    FLOAT  shift, and go to state 16

    $default  reduce using rule 18 (parameter_list)

    parameter_list  go to state 17


State 14

   17 parameter_list: VOID .

    $default  reduce using rule 17 (parameter_list)


State 15

   13 parameter_list: INT . id

    IDENTIFIER  shift, and go to state 11

    id  go to state 18


State 16

   14 parameter_list: FLOAT . id

    IDENTIFIER  shift, and go to state 11

    id  go to state 19


State 17

    4 function: var_type id '(' parameter_list . ')' ';'
    5         | var_type id '(' parameter_list . ')' function_body
   15 parameter_list: parameter_list . ',' INT id
   16               | parameter_list . ',' FLOAT id

    ')'  shift, and go to state 20
    ','  shift, and go to state 21


State 18

   13 parameter_list: INT id .

    $default  reduce using rule 13 (parameter_list)


State 19

   14 parameter_list: FLOAT id .

    $default  reduce using rule 14 (parameter_list)


State 20

    4 function: var_type id '(' parameter_list ')' . ';'
    5         | var_type id '(' parameter_list ')' . function_body

    ';'  shift, and go to state 22
    '{'  shift, and go to state 23

    function_body  go to state 24


State 21

   15 parameter_list: parameter_list ',' . INT id
   16               | parameter_list ',' . FLOAT id

    INT    shift, and go to state 25
    FLOAT  shift, and go to state 26


State 22

    4 function: var_type id '(' parameter_list ')' ';' .

    $default  reduce using rule 4 (function)


State 23

    6 function_body: '{' . statement_list '}'
    7              | '{' . declaration_list statement_list '}'

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    IF          shift, and go to state 30
    RETURN      shift, and go to state 31
    DO          shift, and go to state 32
    WHILE       shift, and go to state 33
    FOR         shift, and go to state 34
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 41

    declaration_list     go to state 42
    declaration          go to state 43
    statement_list       go to state 44
    statement            go to state 45
    matched_statement    go to state 46
    unmatched_statement  go to state 47
    assignment           go to state 48
    expression           go to state 49
    id                   go to state 50


State 24

    5 function: var_type id '(' parameter_list ')' function_body .

    $default  reduce using rule 5 (function)


State 25

   15 parameter_list: parameter_list ',' INT . id

    IDENTIFIER  shift, and go to state 11

    id  go to state 51


State 26

   16 parameter_list: parameter_list ',' FLOAT . id

    IDENTIFIER  shift, and go to state 11

    id  go to state 52


State 27

   10 declaration: INT . id

    IDENTIFIER  shift, and go to state 11

    id  go to state 53


State 28

   11 declaration: FLOAT . id

    IDENTIFIER  shift, and go to state 11

    id  go to state 54


State 29

   60 expression: CONSTANT .

    $default  reduce using rule 60 (expression)


State 30

   26 matched_statement: IF . '(' assignment ')' marker matched_statement jump_marker ELSE marker matched_statement
   35 unmatched_statement: IF . '(' assignment ')' marker statement
   38                    | IF . '(' assignment ')' marker matched_statement jump_marker ELSE marker unmatched_statement

    '('  shift, and go to state 55


State 31

   28 matched_statement: RETURN . ';'
   29                  | RETURN . assignment ';'

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40
    ';'         shift, and go to state 56

    assignment  go to state 57
    expression  go to state 49
    id          go to state 50


State 32

   31 matched_statement: DO . marker statement WHILE '(' marker assignment ')' ';'

    $default  reduce using rule 68 (marker)

    marker  go to state 58


State 33

   30 matched_statement: WHILE . marker '(' assignment ')' marker matched_statement jump_marker
   36 unmatched_statement: WHILE . marker '(' assignment ')' marker unmatched_statement jump_marker

    $default  reduce using rule 68 (marker)

    marker  go to state 59


State 34

   32 matched_statement: FOR . '(' assignment ';' marker assignment ';' marker assignment jump_marker ')' marker matched_statement jump_marker
   37 unmatched_statement: FOR . '(' assignment ';' marker assignment ';' marker assignment jump_marker ')' marker unmatched_statement jump_marker

    '('  shift, and go to state 60


State 35

   41 expression: INC_OP . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 61
    id          go to state 62


State 36

   42 expression: DEC_OP . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 63
    id          go to state 62


State 37

   58 expression: U_PLUS . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 64
    id          go to state 62


State 38

   59 expression: U_MINUS . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 65
    id          go to state 62


State 39

   57 expression: '!' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 66
    id          go to state 62


State 40

   61 expression: '(' . expression ')'

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 67
    id          go to state 62


State 41

   33 matched_statement: '{' . statement_list '}'
   34                  | '{' . '}'

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    IF          shift, and go to state 30
    RETURN      shift, and go to state 31
    DO          shift, and go to state 32
    WHILE       shift, and go to state 33
    FOR         shift, and go to state 34
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 41
    '}'         shift, and go to state 68

    statement_list       go to state 69
    statement            go to state 45
    matched_statement    go to state 46
    unmatched_statement  go to state 47
    assignment           go to state 48
    expression           go to state 49
    id                   go to state 50


State 42

    7 function_body: '{' declaration_list . statement_list '}'
    9 declaration_list: declaration_list . declaration ';'

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    IF          shift, and go to state 30
    RETURN      shift, and go to state 31
    DO          shift, and go to state 32
    WHILE       shift, and go to state 33
    FOR         shift, and go to state 34
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 41

    declaration          go to state 70
    statement_list       go to state 71
    statement            go to state 45
    matched_statement    go to state 46
    unmatched_statement  go to state 47
    assignment           go to state 48
    expression           go to state 49
    id                   go to state 50


State 43

    8 declaration_list: declaration . ';'
   12 declaration: declaration . ',' id

    ';'  shift, and go to state 72
    ','  shift, and go to state 73


State 44

    6 function_body: '{' statement_list . '}'
   23 statement_list: statement_list . marker statement

    '}'  shift, and go to state 74

    $default  reduce using rule 68 (marker)

    marker  go to state 75


State 45

   22 statement_list: statement .

    $default  reduce using rule 22 (statement_list)


State 46

   24 statement: matched_statement .

    $default  reduce using rule 24 (statement)


State 47

   25 statement: unmatched_statement .

    $default  reduce using rule 25 (statement)


State 48

   27 matched_statement: assignment . ';'

    ';'  shift, and go to state 76


State 49

   39 assignment: expression .
   43 expression: expression . LOG_OR marker expression
   44           | expression . LOG_AND marker expression
   45           | expression . NOT_EQUAL expression
   46           | expression . EQUAL expression
   47           | expression . GREATER_OR_EQUAL expression
   48           | expression . LESS_OR_EQUAL expression
   49           | expression . '>' expression
   50           | expression . '<' expression
   51           | expression . SHIFTLEFT expression
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   56           | expression . '%' expression

    EQUAL             shift, and go to state 77
    NOT_EQUAL         shift, and go to state 78
    GREATER_OR_EQUAL  shift, and go to state 79
    LESS_OR_EQUAL     shift, and go to state 80
    SHIFTLEFT         shift, and go to state 81
    LOG_AND           shift, and go to state 82
    LOG_OR            shift, and go to state 83
    '<'               shift, and go to state 84
    '>'               shift, and go to state 85
    '+'               shift, and go to state 86
    '-'               shift, and go to state 87
    '*'               shift, and go to state 88
    '/'               shift, and go to state 89
    '%'               shift, and go to state 90

    $default  reduce using rule 39 (assignment)


State 50

   40 assignment: id . '=' expression
   62 expression: id . '(' exp_list ')'
   63           | id . '(' ')'
   64           | id .

    '='  shift, and go to state 91
    '('  shift, and go to state 92

    $default  reduce using rule 64 (expression)


State 51

   15 parameter_list: parameter_list ',' INT id .

    $default  reduce using rule 15 (parameter_list)


State 52

   16 parameter_list: parameter_list ',' FLOAT id .

    $default  reduce using rule 16 (parameter_list)


State 53

   10 declaration: INT id .

    $default  reduce using rule 10 (declaration)


State 54

   11 declaration: FLOAT id .

    $default  reduce using rule 11 (declaration)


State 55

   26 matched_statement: IF '(' . assignment ')' marker matched_statement jump_marker ELSE marker matched_statement
   35 unmatched_statement: IF '(' . assignment ')' marker statement
   38                    | IF '(' . assignment ')' marker matched_statement jump_marker ELSE marker unmatched_statement

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    assignment  go to state 93
    expression  go to state 49
    id          go to state 50


State 56

   28 matched_statement: RETURN ';' .

    $default  reduce using rule 28 (matched_statement)


State 57

   29 matched_statement: RETURN assignment . ';'

    ';'  shift, and go to state 94


State 58

   31 matched_statement: DO marker . statement WHILE '(' marker assignment ')' ';'

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    IF          shift, and go to state 30
    RETURN      shift, and go to state 31
    DO          shift, and go to state 32
    WHILE       shift, and go to state 33
    FOR         shift, and go to state 34
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 41

    statement            go to state 95
    matched_statement    go to state 46
    unmatched_statement  go to state 47
    assignment           go to state 48
    expression           go to state 49
    id                   go to state 50


State 59

   30 matched_statement: WHILE marker . '(' assignment ')' marker matched_statement jump_marker
   36 unmatched_statement: WHILE marker . '(' assignment ')' marker unmatched_statement jump_marker

    '('  shift, and go to state 96


State 60

   32 matched_statement: FOR '(' . assignment ';' marker assignment ';' marker assignment jump_marker ')' marker matched_statement jump_marker
   37 unmatched_statement: FOR '(' . assignment ';' marker assignment ';' marker assignment jump_marker ')' marker unmatched_statement jump_marker

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    assignment  go to state 97
    expression  go to state 49
    id          go to state 50


State 61

   41 expression: INC_OP expression .
   43           | expression . LOG_OR marker expression
   44           | expression . LOG_AND marker expression
   45           | expression . NOT_EQUAL expression
   46           | expression . EQUAL expression
   47           | expression . GREATER_OR_EQUAL expression
   48           | expression . LESS_OR_EQUAL expression
   49           | expression . '>' expression
   50           | expression . '<' expression
   51           | expression . SHIFTLEFT expression
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   56           | expression . '%' expression

    $default  reduce using rule 41 (expression)


State 62

   62 expression: id . '(' exp_list ')'
   63           | id . '(' ')'
   64           | id .

    '('  shift, and go to state 92

    $default  reduce using rule 64 (expression)


State 63

   42 expression: DEC_OP expression .
   43           | expression . LOG_OR marker expression
   44           | expression . LOG_AND marker expression
   45           | expression . NOT_EQUAL expression
   46           | expression . EQUAL expression
   47           | expression . GREATER_OR_EQUAL expression
   48           | expression . LESS_OR_EQUAL expression
   49           | expression . '>' expression
   50           | expression . '<' expression
   51           | expression . SHIFTLEFT expression
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   56           | expression . '%' expression

    $default  reduce using rule 42 (expression)


State 64

   43 expression: expression . LOG_OR marker expression
   44           | expression . LOG_AND marker expression
   45           | expression . NOT_EQUAL expression
   46           | expression . EQUAL expression
   47           | expression . GREATER_OR_EQUAL expression
   48           | expression . LESS_OR_EQUAL expression
   49           | expression . '>' expression
   50           | expression . '<' expression
   51           | expression . SHIFTLEFT expression
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   56           | expression . '%' expression
   58           | U_PLUS expression .

    $default  reduce using rule 58 (expression)


State 65

   43 expression: expression . LOG_OR marker expression
   44           | expression . LOG_AND marker expression
   45           | expression . NOT_EQUAL expression
   46           | expression . EQUAL expression
   47           | expression . GREATER_OR_EQUAL expression
   48           | expression . LESS_OR_EQUAL expression
   49           | expression . '>' expression
   50           | expression . '<' expression
   51           | expression . SHIFTLEFT expression
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   56           | expression . '%' expression
   59           | U_MINUS expression .

    $default  reduce using rule 59 (expression)


State 66

   43 expression: expression . LOG_OR marker expression
   44           | expression . LOG_AND marker expression
   45           | expression . NOT_EQUAL expression
   46           | expression . EQUAL expression
   47           | expression . GREATER_OR_EQUAL expression
   48           | expression . LESS_OR_EQUAL expression
   49           | expression . '>' expression
   50           | expression . '<' expression
   51           | expression . SHIFTLEFT expression
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   56           | expression . '%' expression
   57           | '!' expression .

    $default  reduce using rule 57 (expression)


State 67

   43 expression: expression . LOG_OR marker expression
   44           | expression . LOG_AND marker expression
   45           | expression . NOT_EQUAL expression
   46           | expression . EQUAL expression
   47           | expression . GREATER_OR_EQUAL expression
   48           | expression . LESS_OR_EQUAL expression
   49           | expression . '>' expression
   50           | expression . '<' expression
   51           | expression . SHIFTLEFT expression
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   56           | expression . '%' expression
   61           | '(' expression . ')'

    EQUAL             shift, and go to state 77
    NOT_EQUAL         shift, and go to state 78
    GREATER_OR_EQUAL  shift, and go to state 79
    LESS_OR_EQUAL     shift, and go to state 80
    SHIFTLEFT         shift, and go to state 81
    LOG_AND           shift, and go to state 82
    LOG_OR            shift, and go to state 83
    '<'               shift, and go to state 84
    '>'               shift, and go to state 85
    '+'               shift, and go to state 86
    '-'               shift, and go to state 87
    '*'               shift, and go to state 88
    '/'               shift, and go to state 89
    '%'               shift, and go to state 90
    ')'               shift, and go to state 98


State 68

   34 matched_statement: '{' '}' .

    $default  reduce using rule 34 (matched_statement)


State 69

   23 statement_list: statement_list . marker statement
   33 matched_statement: '{' statement_list . '}'

    '}'  shift, and go to state 99

    $default  reduce using rule 68 (marker)

    marker  go to state 75


State 70

    9 declaration_list: declaration_list declaration . ';'
   12 declaration: declaration . ',' id

    ';'  shift, and go to state 100
    ','  shift, and go to state 73


State 71

    7 function_body: '{' declaration_list statement_list . '}'
   23 statement_list: statement_list . marker statement

    '}'  shift, and go to state 101

    $default  reduce using rule 68 (marker)

    marker  go to state 75


State 72

    8 declaration_list: declaration ';' .

    $default  reduce using rule 8 (declaration_list)


State 73

   12 declaration: declaration ',' . id

    IDENTIFIER  shift, and go to state 11

    id  go to state 102


State 74

    6 function_body: '{' statement_list '}' .

    $default  reduce using rule 6 (function_body)


State 75

   23 statement_list: statement_list marker . statement

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    IF          shift, and go to state 30
    RETURN      shift, and go to state 31
    DO          shift, and go to state 32
    WHILE       shift, and go to state 33
    FOR         shift, and go to state 34
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 41

    statement            go to state 103
    matched_statement    go to state 46
    unmatched_statement  go to state 47
    assignment           go to state 48
    expression           go to state 49
    id                   go to state 50


State 76

   27 matched_statement: assignment ';' .

    $default  reduce using rule 27 (matched_statement)


State 77

   46 expression: expression EQUAL . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 104
    id          go to state 62


State 78

   45 expression: expression NOT_EQUAL . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 105
    id          go to state 62


State 79

   47 expression: expression GREATER_OR_EQUAL . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 106
    id          go to state 62


State 80

   48 expression: expression LESS_OR_EQUAL . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 107
    id          go to state 62


State 81

   51 expression: expression SHIFTLEFT . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 108
    id          go to state 62


State 82

   44 expression: expression LOG_AND . marker expression

    $default  reduce using rule 68 (marker)

    marker  go to state 109


State 83

   43 expression: expression LOG_OR . marker expression

    $default  reduce using rule 68 (marker)

    marker  go to state 110


State 84

   50 expression: expression '<' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 111
    id          go to state 62


State 85

   49 expression: expression '>' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 112
    id          go to state 62


State 86

   52 expression: expression '+' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 113
    id          go to state 62


State 87

   53 expression: expression '-' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 114
    id          go to state 62


State 88

   54 expression: expression '*' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 115
    id          go to state 62


State 89

   55 expression: expression '/' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 116
    id          go to state 62


State 90

   56 expression: expression '%' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 117
    id          go to state 62


State 91

   40 assignment: id '=' . expression

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    expression  go to state 118
    id          go to state 62


State 92

   62 expression: id '(' . exp_list ')'
   63           | id '(' . ')'

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40
    ')'         shift, and go to state 119

    expression  go to state 120
    exp_list    go to state 121
    id          go to state 62


State 93

   26 matched_statement: IF '(' assignment . ')' marker matched_statement jump_marker ELSE marker matched_statement
   35 unmatched_statement: IF '(' assignment . ')' marker statement
   38                    | IF '(' assignment . ')' marker matched_statement jump_marker ELSE marker unmatched_statement

    ')'  shift, and go to state 122


State 94

   29 matched_statement: RETURN assignment ';' .

    $default  reduce using rule 29 (matched_statement)


State 95

   31 matched_statement: DO marker statement . WHILE '(' marker assignment ')' ';'

    WHILE  shift, and go to state 123


State 96

   30 matched_statement: WHILE marker '(' . assignment ')' marker matched_statement jump_marker
   36 unmatched_statement: WHILE marker '(' . assignment ')' marker unmatched_statement jump_marker

    CONSTANT    shift, and go to state 29
    IDENTIFIER  shift, and go to state 11
    INC_OP      shift, and go to state 35
    DEC_OP      shift, and go to state 36
    U_PLUS      shift, and go to state 37
    U_MINUS     shift, and go to state 38
    '!'         shift, and go to state 39
    '('         shift, and go to state 40

    assignment  go to state 124
    expression  go to state 49
    id          go to state 50


State 97
